--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
      </td>
      <!-- link per menu-->
      <td align="right">
-        <a href="http://www.google.com" style="color:#ff33dd; text-decoration:none;">
+        <a href="https://drive.google.com/file/d/1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO/view?usp=sharing" style="color:#ff33dd; text-decoration:none;">
          <h2>📄 Scarica il menù completo in PDF</h2>
         </a>
      </td>
@@ -373,4 +373,5 @@
     updateSummary();
   </script>
 </body>
+
 </html>
