--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Menu Cliente Paradice Food & Drink</title>
+  <title>Menu Cliente Paradice Food & Drink Online</title>
    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -95,7 +97,7 @@
     }
 	
 	  .highlight {   /* colore categorie */
-      color: #00ff90;
+      color: #FFFFFF;
       font-weight: bold;
 	  }
 	
@@ -179,27 +181,27 @@
 </td>
        <td align="center">
       <!-- link per menu-->
-       <a href="http://www.google.com" style="color:#ffffff; text-decoration:none;">
+       <a href="https://drive.google.com/file/d/1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO/view?usp=sharing"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📥 Menu PDF</h2>
        </a>
 	  <!-- link per dove siamo-->
-       <a href="https://www.google.it/maps/place/Via+Trionfale,+11407,+00135+Roma+RM/@41.9609568,12.4072265,17z/data=!3m1!4b1!4m6!3m5!1s0x132f5ddc0c11acc5:0x780b5061c9d63fb4!8m2!3d41.9609528!4d12.4098014!16s%2Fg%2F11csfhq2vg?hl=it&entry=ttu&g_ep=EgoyMDI1MDczMC4wIKXMDSoASAFQAw%3D%3D"target="_blank" style="color:#ff33dd; text-decoration:none;">
+       <a href="https://www.google.it/maps/place/Via+Trionfale,+11407,+00135+Roma+RM/@41.9609568,12.4072265,17z/data=!3m1!4b1!4m6!3m5!1s0x132f5ddc0c11acc5:0x780b5061c9d63fb4!8m2!3d41.9609528!4d12.4098014!16s%2Fg%2F11csfhq2vg?hl=it&entry=ttu&g_ep=EgoyMDI1MDczMC4wIKXMDSoASAFQAw%3D%3D"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📍 Dove Siamo</h2>
        </a>
+	      <!-- link per instagram -->
+       <a href="https://www.instagram.com/paradicefood_drink?igsh=ZTB1eTZnM3k0eGQx"target="_blank" style="color: #962FBF; text-decoration:none;">
+       <h2>     <i class="fa fa-instagram"> </i> Instagram </h2>
+       </a>
 	  <!-- link per just eat-->
-       <a href="http://www.google.com" style="color:#FF8000; text-decoration:none;">
+       <a href="http://www.google.com"target="_blank" style="color:#FF8000; text-decoration:none;">
        <h2>🍔 Just Eat</h2>
        </a>
       <!-- link per glovo-->
-       <a href="http://www.google.com" style="color:#009B7E; text-decoration:none;">
+       <a href="http://www.google.com"target="_blank" style="color:#FFC244; text-decoration:none;">
        <h2>🍱 Glovo</h2>
        </a>
-	    <!-- link per instagram -->
-       <a href="https://www.instagram.com/paradicefood_drink?igsh=ZTB1eTZnM3k0eGQx" style="color:#ff33dd; text-decoration:none;">
-       <h2>📷 Instagram</h2>
-       </a>
 	  <!-- link per libro ingredienti-->
-       <a href="http://www.google.com" style="color:#ff33dd; text-decoration:none;">
+       <a href="http://www.google.com"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📖 Consulta il Libro Allergeni</h2>
        </a>
      </td>
