--- a/index.html
+++ b/index.html
@@ -163,22 +163,18 @@
   </style>
 </head>
    <body>
-   <!-- ////////////////////////////////////////////////////// -->
-   <header>
-  <div class="logo-container">
+
+
+<header>
+ <div class="logo-container">
     <img 
-      src="https://drive.google.com/uc?export=view&id=1oYKWfqXfKkiJfChNef1ypIFlNa1GwGfJ" 
+      src="https://i.imgur.com/Q019u6t.png"
       alt="Logo Parad Ice" 
       class="logo"
     />
   </div>
-  <h1>🍔🍹 MENU' <span>PARAD ICE</span></h1>
-</header>
-<!--//////////////////////////////////////////////////////////-->
-
-
         <h1>🍔🍸  MENU'<span style="color:#FC52AE;">PARAD</span><span style="color:#04C1D6;"> ICE</span> </h1>
-    <header>
+    
        <nav>
 	     <h2>
            <a>Snacks</a> •
