--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       class="logo"
     />
   </div>
-        <h1>🍔🍸  MENU'<span style="color:#FC52AE;">PARAD</span><span style="color:#04C1D6;"> ICE</span> </h1>
+        <!-- <h1>🍔🍸  MENU'<span style="color:#FC52AE;">PARAD</span><span style="color:#04C1D6;"> ICE</span> </h1> -->
     
        <nav>
 	     <h2>
