--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div>
 	  <table border="3" cellspacing="40" cellpadding="" align="center" width="50">
-	  <td  bgcolor="#4D2B6B">
+	  <td  bgcolor="#000000">
        <h2>📋 Seleziona una categoria</h2>
      <select id="categorySelect" onchange="showProducts()">
        <option value="">-- Seleziona --</option>
@@ -227,7 +227,7 @@
 
     <tr> 
     </td>
-       <td align="center" bgcolor="#4D2B6B">
+       <td align="center" bgcolor="#000000">
 	   <div class="grid-links">
       
        <a href="https://drive.google.com/uc?export=download&id=1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO"target="_blank" style="color:#ffffff; text-decoration:none;">
@@ -439,7 +439,7 @@
     updateSummary();
   </script>
     <footer>
-    <p>© 2024 Paradice Food & Drink. Tutti i diritti riservati.</p>
+    <p>© 2024 Paradice Food & Drink.</p>
     <!-- <p><a href="/privacy.html" style="color: #aaa;">privacy </a></p> -->
   </footer>
 </body>
