--- a/index.html
+++ b/index.html
@@ -212,16 +212,18 @@
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
     </select>
-	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:30</strong></p> </h2>
+	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:30 / 17:00–00:00</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
   <div id="orderSummary"> 
 	      <!-- TESTO CHE SCORRE -->
 		  <p>
+		  <h2>
 		  <font color="#00BFFF" face="Copperplate Gothic Bold" >
-		  <marquee behavior="scroll" direction="left">🔧⚠️ Stiamo aggiornando il sito per offrirti un'esperienza migliore – grazie per la tua pazienza!!!</marquee>
+		  <marquee behavior="scroll" direction="left">Per qualsiasi richiesta di informazioni o per verificare la disponibilità degli articoli, si prega di contattare direttamente il locale. o anche sulle piattaforme Just Eat o Glovo.  🔧⚠️ Stiamo aggiornando il sito per offrirti un'esperienza migliore – grazie per la tua pazienza!!!</marquee>
 		  </font>
+		  </h2>
 		  </p>  
   </div>
 
@@ -253,9 +255,6 @@
        <h2> </i>✍️ le nostre recensioni</h2>
        </a>
 	  
-       <a href="https://drive.google.com/file/d/1yXR9dV9DExwdRrsFLpeyhaKWDMbzp3bR/view?usp=sharing"target="_blank" style="color:#ffffff; text-decoration:none;">
-       <h2>📚  Consulta il Libro Allergeni</h2>
-       </a>
 	   </div>
      </td>
 </table>
@@ -311,7 +310,7 @@
 		
        
 		
-		/*{ name: "Pancakes", description: "(Sciroppo D'acero o Fragole)", category: "Dolci", price: 5.00 },*/
+		{ name: "Pancakes", description: "(Sciroppo D'acero o Fragole)", category: "Dolci", price: 5.00 },
 		{ name: "Coppa Gelato*", description: "(Crema o Cioccolato)", category: "Dolci", price: 4.00 },
 		{ name: "Sweet Paradice*", description: "(Un Brownie Speciale)", category: "Dolci", price: 6.00 },
 		{ name: "Waffle*", description: "(Fragola,Frutti di Bosco,Nutella,Pistacchio)", category: "Dolci", price: 5.00 },
@@ -440,4 +439,3 @@
   </footer>
 </body>
 </html>
-
