--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
     </select>
-	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00</strong></p> </h2>
+	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:30 / 17:00–00:00</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
@@ -279,31 +279,31 @@
 		
 			
         
-		{ name: "Bacon Burger*", description: "(Burger di Manzo, Bacon, Cheddar, Iceberg, Pomodoro, Salsa Burger)", category: "Burgers", price: 11.00 },
-		{ name: "Bosco Burger*", description: "(Burger di Manzo, Lardo, Provola, Funghi Porcini, Salsa Senape)", category: "Burgers", price: 14.00 },
-		{ name: "Cheese Burger*", description: "(Burger di Manzo, Cheddar, Iceberg, Pomodoro, Cetriolini, Salsa Ketchup & Maionese)", category: "Burgers", price: 10.00 },
-		{ name: "Crispy Chicken Burger*", description: "(Cotoletta di Pollo, Insalata, Pomodoro, Maionese)", category: "Burgers", price: 10.00 },
-		{ name: "Pulled Pork", description: "(Maiale Sfilacciato, Iceberg, Pomodoro, Cipolla Caramellata, BBQ)", category: "Burgers", price: 13.00 },
-		{ name: "Smash Burger*", description: "(Pan Patata, Cipolla, Bacon, Cheddar con Salsa a Piacere)", category: "Burgers", price: 13.00 },
-		{ name: "Vulcano Burger*", description: "(Iceberg, Cipolla, Cheddar, Bacon, Salsa Piccante)", category: "Burgers", price: 13.00, customColor: "red" },
-		{ name: "Double Trouble Burger*", description: "(Doppio Burgers, Cheddar, Bacon, Iceberg, Pomodoro, Ketchup & Maionese)", category: "Burgers", price: 18.00 },
-		{ name: "Paradice Chicken Burger*", description: "(Cotoletta di Pollo, Insalata, Pomodoro, Bacon, Cheddar, Senape al Miele)", category: "Burgers", price: 12.00 },
-		{ name: "Green Burger*", description: "(Bun Vegano, Burger Vegetale, Insalata e Pomodoro)", category: "Burgers", price: 12.00, customColor: "#00FF00"  },
+		{ name: "Bacon Burger*", description: "(Burger di Manzo, Cheddar, Bacon Salsa Burger, Iceberg, Pomodoro)", category: "Burgers", price: 11.00 },
+		{ name: "Bosco Burger*", description: "(Burger di Manzo, Provola, Lardo, Salsa Senape, Funghi Porcini)", category: "Burgers", price: 14.00 },
+		{ name: "Cheese Burger*", description: "(Burger di Manzo, Cheddar,Salsa Ketchup, Maionese,Iceberg, Pomodoro, Cetriolini)", category: "Burgers", price: 10.00 },
+		{ name: "Crispy Chicken Burger*", description: "(Cotoletta di Pollo, Salsa Maionese, Iceberg, Pomodoro)", category: "Burgers", price: 10.00 },
+		{ name: "Pulled Pork", description: "(Maiale Sfilacciato, Salsa BBQ, Iceberg, Pomodoro, Cipolla Caramellata)", category: "Burgers", price: 13.00 },
+		{ name: "Smash Burger*", description: "(Pan Patata, Burger di Manzo, Bacon, Cipolla Fresca, Cheddar con Salsa a Scelta)", category: "Burgers", price: 13.00 },
+		{ name: "Vulcano Burger*", description: "(Burger di Manzo, Cheddar, Bacon, Salsa Piccante Iceberg, Cipolla fresca)", category: "Burgers", price: 13.00, customColor: "red" },
+		{ name: "Double Trouble Burger*", description: "(Doppio Burger di manzo, Cheddar, Bacon, Salsa Ketchup & Maionese, Iceberg, Pomodoro)", category: "Burgers", price: 18.00 },
+		{ name: "Paradice Chicken Burger*", description: "(Cotoletta di Pollo, Cheddar, Bacon, Salsa Senape al Miele, Insalata, Pomodoro)", category: "Burgers", price: 12.00 },
+		{ name: "Green Burger*", description: "(Bun Vegano, Burger Vegano, Insalata e Pomodoro)", category: "Burgers", price: 12.00, customColor: "#00FF00"  },
 		
 		
 		
-        { name: "Caesar Salad*", description: "(Insalata Iceberg, Pollo,Crostini, Scaglie Parmigiano, Salsa Caesar)", category: "Insalate", price: 8.50 },
-		{ name: "Mex Salad*", description: "(Insalata Iceberg, Pomodorini, Pollo, Fagioli Rossi, Jalapeño, Mayo Spicy)", category: "Insalate", price: 9.00 },
-		{ name: "Paradice Salad", description: "(Insalata Iceberg, Pomodorini, Mais, Tonno e Cipolla)", category: "Insalate", price: 9.00 },
-		{ name: "Veggie Salad", description: "(Insalata Iceberg, Pomodoro, Mozzarella,Verdure, Hummus di ceci)", category: "Insalate", price: 8.50, customColor: "#00FF00" },
-		{ name: "Insalata Greca", description: "(Insalata Iceberg, pomodorini, olive, cipolla fresca, formaggio feta)", category: "Insalate", price: 9.00 },
+        { name: "Caesar Salad*", description: "(Iceberg, Pollo,Crostini, Scaglie Parmigiano, Salsa Caesar)", category: "Insalate", price: 8.50 },
+		{ name: "Mex Salad*", description: "(Iceberg, Pomodoro, Pollo speziato, Fagioli Rossi, Jalapeño, Mayo Spicy)", category: "Insalate", price: 9.00 },
+		{ name: "Paradice Salad", description: "(Iceberg, Pomodorini, Mais, Tonno e Cipolla)", category: "Insalate", price: 9.00 },
+		{ name: "Veggie Salad", description: "(Iceberg, Pomodoro, Mozzarella,Verdure, Hummus di ceci)", category: "Insalate", price: 8.50, customColor: "#00FF00" },
+		{ name: "Insalata Greca", description: "(Iceberg, pomodorini, olive, cipolla fresca, formaggio feta)", category: "Insalate", price: 9.00 },
 		
 		
 		
 		
-        { name: "Tacos Triplete", description: "(Tre Tacos:-Chili di Carne,-Pollo Speziato yogurt lime  -Verdure, guacamole e cheddar)", category: "Piatti Messicani", price: 9.00 },
-		{ name: "Quesadilla Loca", description: "(Tortilla Con Cheddar Fuso, jalapeños, verdure e maiale sfilacciato (2 pz))", category: "Piatti Messicani", price: 12.00 },
-		{ name: "Burrito Supremo", description: "(Con Chili di Carne, Insalata, Pomodoro e Cipolla Fresca)", category: "Piatti Messicani", price: 8.00 },
+        { name: "Tacos Triplete", description: "(Tre Tacos: -Chili di Carne e insalata -Pollo Speziato,insalata, yogurt lime e jalapeno-Verdure grigliate,insalata,guacamole e cheddar)", category: "Piatti Messicani", price: 9.00 },
+		{ name: "Quesadilla Loca", description: "(Due Tortilla Con:-Cheddar Fuso, jalapeños -Verdure e maiale sfilacciato)", category: "Piatti Messicani", price: 12.00 },
+		{ name: "Burrito Supremo", description: "(Con Chili di Carne, Insalata,Pomodoro, cheddar e yogurt)", category: "Piatti Messicani", price: 8.00 },
 		{ name: "Chili Combo", description: "(Chili Con Carne e cubetti di pomodoro fresco accompagnate da tortillas calde)", category: "Piatti Messicani", price: 8.00 },
 		
 		
@@ -439,4 +439,3 @@
   </footer>
 </body>
 </html>
-
