--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
     </select>
-	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00</strong></p> </h2>
+	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00<br>⚠️ Sabato e domenica mattina: chiuso<br>Ci scusiamo per l’errore di stampa sul volantino.<br> L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
@@ -439,5 +439,6 @@
   </footer>
 </body>
 </html>
+
 
 
