--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
            <a>Dolci</a> •
            <a>Drinks</a> •
            <a>Spritz</a> •
-           <a>Birre</a>
+           <a>Birre</a> <br>
+		   <p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00<br>Sabato e domenica mattina: chiuso</strong></p>
 		 </h2>
        </nav>
             <a class="button-link" href="tel:+390624302601">📞 CHIAMACI</a>
@@ -212,7 +213,7 @@
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
     </select>
-	 <h2><p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00<br>Sabato e domenica mattina: chiuso<br><br>⚠️ Ci scusiamo per l’errore di stampa sul volantino.<br> L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
+	 <h2><p style="margin-top: 20px;">⚠️ AVVISI<br> Ci scusiamo per l’errore di stampa sul volantino L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
