--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     
        <nav>
 	     <h2>
-           <a>Snacks</a> •
+           <!-- <a>Snacks</a> •
            <a>Fritti</a> •
            <a>Burgers</a> •
            <a>Insalate</a> •
@@ -185,7 +185,7 @@
            <a>Dolci</a> •
            <a>Drinks</a> •
            <a>Spritz</a> •
-           <a>Birre</a> <br>
+           <a>Birre</a> --> 
 		   <p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00<br>Sabato e domenica mattina: chiuso</strong></p>
 		 </h2>
        </nav>
