--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
     </select>
-	 <h2><p style="margin-top: 20px;">⚠️ AVVISI<br> Ci scusiamo per l’errore di stampa sul volantino L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
+	 <h2><p style="margin-top: 20px;">⚠️ AVVISO<br> Ci scusiamo per l’errore di stampa sul volantino L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
@@ -440,6 +440,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
