--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       padding: 10px;
     }
     .grid-links a {
-      background: #1a002d;
+      background: #1a002d;    
       padding: 10px;
       border-radius: 8px;
       text-decoration: none;
@@ -186,21 +186,24 @@
            <a>Drinks</a> •
            <a>Spritz</a> •
            <a>Birre</a> --> 
-		   <p style="margin-top: 20px;">⏰ Aperto dal martedì alla domenica:<br><strong>12:00–15:00 / 18:00–23:00<br>Sabato e domenica mattina: chiuso</strong></p>
+		   <p style="margin-top: 20px;">⏰ Aperto Martedì-Venerdì: <br> 12:00–15:00 / 18:00–23:00<br> Sabato e Domenica:solo sera, <br> 17:00–24:00</strong></p>
 		 </h2>
        </nav>
-            <a class="button-link" href="tel:+390624302601">📞 CHIAMACI</a>
+            <a class="button-link" href="tel:+390624302601">📞 CHIAMACI</a> <br>
+			<a class="button-link" href="https://drive.google.com/uc?export=download&id=1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO">📥 SCOPRI IL NOSTRO MENU</a>
+			
+			
    </header>
 
     <div>
 	  <table border="3" cellspacing="40" cellpadding="" align="center" width="50">
 	  <td  bgcolor="#000000">
-       <h2>📋 Seleziona una categoria</h2>
+       <!-- <h2>📋 Seleziona una categoria</h2>
      <select id="categorySelect" onchange="showProducts()">
        <option value="">-- Seleziona --</option>
 	  <!-- CATEGORIE -->
 	  
-      <!-- <option value="Snack">Snack</option> -->
+      <!-- <option value="Snack">Snack</option> 
       <option value="Fritti">Fritti</option>
 	  <option value="Burgers">Burgers</option>
 	  <option value="Insalate">Insalate</option>
@@ -208,12 +211,12 @@
       <option value="Dolci">Dolci</option>
 	  <option value="Bevande">Bevande</option>
 	  <!-- <option value="Drinks">Drinks</option> -->
-	  <!-- <option value="Spritz">Spritz</option> -->
+	  <!-- <option value="Spritz">Spritz</option> 
 	  <option value="Birre">Birre</option>
 	  <option value="Artigianali">Artigianali</option>
 	  <option value="Caffetteria">Caffetteria</option>
-    </select>
-	 <h2><p style="margin-top: 20px;">⚠️ AVVISO<br> Ci scusiamo per l’errore di stampa sul volantino L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
+    </select> -->
+	 <h2><p style="margin-top: 20px;">⚠️ AVVISI<br> Ci scusiamo per l’errore di stampa sul volantino L’attività resta chiusa il sabato e la domenica mattina.</strong></p> </h2>
     </div>
 
   <div id="productList"></div>
@@ -222,7 +225,7 @@
 		  <p>
 		  <h2>
 		  <font color="#00BFFF" face="Copperplate Gothic Bold" >
-		  <marquee behavior="scroll" direction="left">Per qualsiasi richiesta di informazioni o per verificare la disponibilità degli articoli, si prega di contattare direttamente il locale. o anche sulle piattaforme Just Eat o Glovo.  🔧⚠️ Stiamo aggiornando il sito per offrirti un'esperienza migliore – grazie per la tua pazienza!!!</marquee>
+		  <marquee behavior="scroll" direction="left">Per qualsiasi richiesta di informazioni o per verificare la disponibilità degli articoli, si prega di contattare direttamente il locale. o anche sulle piattaforme Just Eat o Glovo.  🔧⚠️</marquee>
 		  </font>
 		  </h2>
 		  </p>  
@@ -233,8 +236,8 @@
        <td align="center" bgcolor="#000000">
 	   <div class="grid-links">
       
-       <a href="https://drive.google.com/file/d/1rRYWzz57g88o2ajx4QI4-QQNHbQ-8gLE/view?usp=sharing"target="_blank" style="color:#ffffff; text-decoration:none;">
-       <h2>📥 Scopri il Nostro Menu Completo</h2>
+       <!-- <a href="https://drive.google.com/uc?export=download&id=1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO"target="_blank" style="color:#ffffff; text-decoration:none; background: #ff33a0;">
+       <h2>📥 Scopri il Nostro Menu Completo</h2> -->
 	   
        <a href="https://www.google.it/maps/place/Via+Trionfale,+11407,+00135+Roma+RM/@41.9609568,12.4072265,17z/data=!3m1!4b1!4m6!3m5!1s0x132f5ddc0c11acc5:0x780b5061c9d63fb4!8m2!3d41.9609528!4d12.4098014!16s%2Fg%2F11csfhq2vg?hl=it&entry=ttu&g_ep=EgoyMDI1MDczMC4wIKXMDSoASAFQAw%3D%3D"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📍 Dove Siamo</h2>
@@ -440,8 +443,6 @@
   </footer>
 </body>
 </html>
-
-
 
 
 
