--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
        <!-- <a href="https://drive.google.com/uc?export=download&id=1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO"target="_blank" style="color:#ffffff; text-decoration:none; background: #ff33a0;">
        <h2>📥 Scopri il Nostro Menu Completo</h2> -->
 	   
-       <a href="https://www.google.it/maps/place/Via+Trionfale,+11407,+00135+Roma+RM/@41.9609568,12.4072265,17z/data=!3m1!4b1!4m6!3m5!1s0x132f5ddc0c11acc5:0x780b5061c9d63fb4!8m2!3d41.9609528!4d12.4098014!16s%2Fg%2F11csfhq2vg?hl=it&entry=ttu&g_ep=EgoyMDI1MDczMC4wIKXMDSoASAFQAw%3D%3D"target="_blank" style="color:#ffffff; text-decoration:none;">
+       <a href="https://maps.app.goo.gl/Q7Sj25ey56GBFYbZ8"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📍 Dove Siamo</h2>
        </a>
 	     
@@ -443,6 +443,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
