--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
            <a>Drinks</a> •
            <a>Spritz</a> •
            <a>Birre</a> --> 
-		   <p style="margin-top: 20px;">⏰ Aperto Martedì-Venerdì: <br> 12:00–15:00 / 18:00–23:00<br> Sabato e Domenica:solo sera, <br> 17:00–24:00</strong></p>
+		   <p style="margin-top: 20px;">⏰ <br> Martedì-Venerdì <br> 12:00–15:00 / 18:00–23:00<br> Sabato e Domenica solo sera <br> 17:00–24:00</strong></p>
 		 </h2>
        </nav>
             <a class="button-link" href="tel:+390624302601">📞 CHIAMACI</a> <br>
@@ -239,7 +239,7 @@
        <!-- <a href="https://drive.google.com/uc?export=download&id=1evnEwlJD8_pli1PLFt9Pb9FNi4tVOAcO"target="_blank" style="color:#ffffff; text-decoration:none; background: #ff33a0;">
        <h2>📥 Scopri il Nostro Menu Completo</h2> -->
 	   
-       <a href="https://maps.app.goo.gl/FKEzWkjXrbTTEgYy7"target="_blank" style="color:#ffffff; text-decoration:none;">
+       <a href="https://maps.app.goo.gl/Q7Sj25ey56GBFYbZ8"target="_blank" style="color:#ffffff; text-decoration:none;">
        <h2>📍 Dove Siamo</h2>
        </a>
 	     
@@ -443,8 +443,6 @@
   </footer>
 </body>
 </html>
-
-
 
 
 
