--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
            <a>Drinks</a> •
            <a>Spritz</a> •
            <a>Birre</a> --> 
-		   <p style="margin-top: 20px;">⏰ <br> Martedì-Venerdì <br> 12:00–15:00 / 18:00–23:00<br> Sabato e Domenica solo sera <br> 17:00–24:00</strong></p>
+		   <p style="margin-top: 20px;">⏰ <br> Martedì-Venerdì <br> 12:00–15:00 / 18:00–23:00<br> Sabato e Domenica <br> solo sera <br> 17:00–24:00</strong></p>
 		 </h2>
        </nav>
             <a class="button-link" href="tel:+390624302601">📞 CHIAMACI</a> <br>
@@ -443,6 +443,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
