--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
        <h2>📍 Dove Siamo</h2>
        </a>
 	     
-       <a href="https://www.instagram.com/paradice_food_e_drink?igsh=ZTB1eTZnM3k0eGQx"target="_blank" style="color: #962FBF; text-decoration:none;">
+       <a href="https://www.instagram.com/paradice.roma?igsh=ZTB1eTZnM3k0eGQx"target="_blank" style="color: #962FBF; text-decoration:none;">
        <h2>     <i class="fa fa-instagram"> </i> Instagram </h2>
        </a>
 	 
@@ -443,6 +443,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
